Add check for if isEmpty data types.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reusable-quantum-component",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "repository": "https://github.com/Quantum-IT-Solutions/reusable-quantum-component.git",
   "license": "MIT"
 }
